--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -10,12 +10,14 @@
         android:id="@+id/button_toast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_margin="8dp"
         android:onClick="showToast"
         android:text="@string/button_label_toast"
         android:textColor="@color/black"
+        android:textSize="60sp"
         app:cornerRadius="0dp"
+        app:layout_constraintEnd_toStartOf="@+id/button_count"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,26 +25,32 @@
         android:id="@+id/button_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:onClick="countUp"
         android:text="@string/button_label_count"
         android:textColor="@color/black"
+        android:textSize="60sp"
         app:cornerRadius="0dp"
-        app:layout_constraintStart_toStartOf="@id/button_toast"
-        app:layout_constraintTop_toBottomOf="@id/button_toast" />
+        app:layout_constraintBottom_toBottomOf="@id/button_toast"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button_toast"
+        app:layout_constraintTop_toTopOf="@id/button_toast" />
 
     <TextView
         android:id="@+id/show_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#FFFF00"
         android:gravity="center"
         android:text="@string/count_initial_value"
         android:textColor="@color/purple_500"
-        android:textSize="120sp"
+        android:textSize="200sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/button_toast"
-        app:layout_constraintTop_toTopOf="@id/button_toast" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_toast" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
