change buttons text color, change constraint to linear layout

--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_margin="8dp"
         android:onClick="showToast"
         android:text="@string/button_label_toast"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="60sp"
         app:cornerRadius="0dp"
         app:layout_constraintEnd_toStartOf="@+id/button_count"
@@ -28,7 +28,7 @@
         android:layout_marginStart="8dp"
         android:onClick="countUp"
         android:text="@string/button_label_count"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="60sp"
         app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="@id/button_toast"
