--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="8dp"
         android:onClick="showToast"
         android:text="@string/button_label_toast"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:cornerRadius="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:onClick="countUp"
         android:text="@string/button_label_count"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:cornerRadius="0dp"
         app:layout_constraintStart_toStartOf="@id/button_toast"
         app:layout_constraintTop_toBottomOf="@id/button_toast" />
